# Macrocirculation1D0D

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  calibration.cpp  nonlinear_1d_solver.cpp
data/1d-boundary/: 37-vessels.json
data/1d-meshes/: 37-vessels.json
src/: CMakeLists.txt
src/macrocirculation/: csv_vessel_tip_writer.cpp  csv_vessel_tip_writer.hpp  dof_map.cpp  dof_map.hpp  edge_boundary_evaluator.cpp  edge_boundary_evaluator.hpp  graph_csv_writer.cpp  graph_csv_writer.hpp  interpolate_to_vertices.cpp  rcr_estimator.cpp  rcr_estimator.hpp  vessel_tree_flow_integrator.cpp
tests/: CMakeLists.txt  test_buffer_system.cpp  test_nonlinear_characteristic_bcs.cpp  test_nonlinear_solver_bitwise.cpp
